docs/0.0.0.0/_sources/gallery/geometry/plot_line_3.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/geometry/plot_line_3.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_geometry_plot_line_3.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_geometry_plot_line_3.py:


3x3 Line - Geometry Visualization
=================================
This script demonstrates how to create and visualize a 3x3 line geometry using the FiberFusing library.

.. GENERATED FROM PYTHON SOURCE LINES 6-13

.. code-block:: Python


    from FiberFusing import Geometry, DomainAlignment, BackGround
    from FiberFusing.fiber import FiberLoader
    from FiberFusing.profile import Profile, StructureType










.. GENERATED FROM PYTHON SOURCE LINES 14-15

Set up the background medium (air)

.. GENERATED FROM PYTHON SOURCE LINES 15-17

.. code-block:: Python

    air_background = BackGround(refractive_index=1.0)








.. GENERATED FROM PYTHON SOURCE LINES 18-19

Create the cladding structure based on the fused fiber profile

.. GENERATED FROM PYTHON SOURCE LINES 19-30

.. code-block:: Python

    profile = Profile()

    profile.add_structure(
        structure_type=StructureType.LINEAR,
        number_of_fibers=3,
        fusion_degree=0.3,
        fiber_radius=62.5e-6
    )

    profile.refractive_index = 1.4444








.. GENERATED FROM PYTHON SOURCE LINES 31-32

Load fibers (e.g., SMF-28) positioned at the cores of the cladding structure

.. GENERATED FROM PYTHON SOURCE LINES 32-38

.. code-block:: Python

    fiber_loader = FiberLoader()
    fibers = [
        fiber_loader.load_fiber('SMF28', clad_refractive_index=profile.refractive_index, position=core_position)
        for core_position in profile.cores
    ]








.. GENERATED FROM PYTHON SOURCE LINES 39-40

Set up the geometry with the defined background, cladding structure, and resolution

.. GENERATED FROM PYTHON SOURCE LINES 40-46

.. code-block:: Python

    geometry = Geometry(
        x_bounds=DomainAlignment.CENTERING,
        y_bounds=DomainAlignment.CENTERING,
        resolution=250
    )








.. GENERATED FROM PYTHON SOURCE LINES 47-48

Add the fibers to the geometry

.. GENERATED FROM PYTHON SOURCE LINES 48-52

.. code-block:: Python

    geometry.add_structure(air_background, profile, *fibers)

    geometry.initialize()








.. GENERATED FROM PYTHON SOURCE LINES 53-54

Plot the resulting geometry

.. GENERATED FROM PYTHON SOURCE LINES 54-55

.. code-block:: Python

    geometry.plot()



.. image-sg:: /gallery/geometry/images/sphx_glr_plot_line_3_001.png
   :alt: Fiber structure, Fiber structure
   :srcset: /gallery/geometry/images/sphx_glr_plot_line_3_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Figure size 1000x500 with 3 Axes>




.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 2.342 seconds)


.. _sphx_glr_download_gallery_geometry_plot_line_3.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_line_3.ipynb <plot_line_3.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_line_3.py <plot_line_3.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: plot_line_3.zip <plot_line_3.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
