docs/v1.5.0.0/_sources/gallery/geometry/plot_line_3.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/geometry/plot_line_3.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_geometry_plot_line_3.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_geometry_plot_line_3.py:


3x3 Line - Geometry Visualization
=================================
This script demonstrates how to create and visualize a 3x3 line geometry using the FiberFusing library.

.. GENERATED FROM PYTHON SOURCE LINES 6-12

.. code-block:: Python


    from FiberFusing import Geometry, BackGround
    from FiberFusing.fiber.catalogue import load_fiber
    from FiberFusing.configuration.line import FusedProfile_03x03
    from PyOptik import MaterialBank








.. GENERATED FROM PYTHON SOURCE LINES 13-14

Define the operational parameters

.. GENERATED FROM PYTHON SOURCE LINES 14-16

.. code-block:: Python

    wavelength = 1.55e-6  # Wavelength in meters (1.55 micrometers)








.. GENERATED FROM PYTHON SOURCE LINES 17-18

Set up the background medium (air)

.. GENERATED FROM PYTHON SOURCE LINES 18-20

.. code-block:: Python

    air_background = BackGround(index=1.0)








.. GENERATED FROM PYTHON SOURCE LINES 21-22

Create the cladding structure based on the fused fiber profile

.. GENERATED FROM PYTHON SOURCE LINES 22-28

.. code-block:: Python

    cladding = FusedProfile_03x03(
        fiber_radius=62.5e-6,  # Radius of the fibers in the cladding (in meters)
        fusion_degree=0.3,  # Degree of fusion in the structure
        index=MaterialBank.fused_silica.compute_refractive_index(wavelength)  # Refractive index of silica at the specified wavelength
    )








.. GENERATED FROM PYTHON SOURCE LINES 29-30

Load fibers (e.g., SMF-28) positioned at the cores of the cladding structure

.. GENERATED FROM PYTHON SOURCE LINES 30-35

.. code-block:: Python

    fibers = [
        load_fiber('SMF28', wavelength=wavelength, position=core_position)
        for core_position in cladding.cores
    ]








.. GENERATED FROM PYTHON SOURCE LINES 36-37

Set up the geometry with the defined background, cladding structure, and resolution

.. GENERATED FROM PYTHON SOURCE LINES 37-45

.. code-block:: Python

    geometry = Geometry(
        background=air_background,
        additional_structure_list=[cladding],
        x_bounds='centering',
        y_bounds='centering',
        resolution=250
    )








.. GENERATED FROM PYTHON SOURCE LINES 46-47

Add the fibers to the geometry

.. GENERATED FROM PYTHON SOURCE LINES 47-49

.. code-block:: Python

    geometry.add_fiber(*fibers)








.. GENERATED FROM PYTHON SOURCE LINES 50-51

Plot the resulting geometry

.. GENERATED FROM PYTHON SOURCE LINES 51-52

.. code-block:: Python

    geometry.plot()



.. image-sg:: /gallery/geometry/images/sphx_glr_plot_line_3_001.png
   :alt: Fiber structure, Fiber structure
   :srcset: /gallery/geometry/images/sphx_glr_plot_line_3_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Figure size 1000x500 with 3 Axes>




.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 4.482 seconds)


.. _sphx_glr_download_gallery_geometry_plot_line_3.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_line_3.ipynb <plot_line_3.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_line_3.py <plot_line_3.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: plot_line_3.zip <plot_line_3.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
